--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "axios": "0.19.0",
     "core-js": "^3.3.2",
+    "dayjs": "^1.8.15",
+    "mobile-device-detect": "^0.3.3",
     "register-service-worker": "^1.6.2",
+    "tailwindcss": "^1.0.5",
+    "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
+    "vue-content-loader": "^0.2.2",
+    "vue-forage": "^1.1.1",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.2.0",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-e2e-nightwatch": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
@@ -32,7 +42,12 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "geckodriver": "^1.19.0",
+    "git-branch-is": "^2.1.0",
+    "gulp": "^4.0.2",
+    "gulp-replace": "^1.0.0",
+    "husky": "^3.0.1",
     "lint-staged": "^9.4.2",
+    "purgecss": "^1.3.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
@@ -69,8 +84,15 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not ie <= 8"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && (git-branch-is master && npm --no-git-tag-version version minor) || (git-branch-is release/dev && npm --no-git-tag-version version patch) || echo 'non CI/CD branch'",
+      "post-commit": "git-branch-is master && git tag v$(npx -c 'echo \"$npm_package_version\"') && git add package.json package-lock.json"
+    }
+  },
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest"
   },
